# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2

  12 Jan 2007; Roy Marples <uberlord@gentoo.org>:

    Fix bootmisc, #161328

  10 Jan 2007; Roy Marples <uberlord@gentoo.org>:

    Fix some restarting issues when --nodeps is used.
    Fix stopping for daemons that take some time.

  10 Jan 2007; Mike Frysinger <vapier@gentoo.org>:

    Rename --update option in depscan.sh to --force.

* baselayout-1.13.0_alpha11 (10 Jan 2006)

  10 Jan 2007; Roy Marples <uberlord@gentoo.org>:

    New Makefile directive FILES_APPEND so we can have a base config
    which OS specific configs can append to.

  09 Jan 2007; Mike Frysinger <vapier@gentoo.org>:

    If the adjtime file is not specified, then don't bother trying to use its
    facilities so that we can run clock as early as possible in the boot
    process.

  09 Jan 2007; Roy Marples <uberlord@gentoo.org>:

    Removed lots of rc-daemon.sh cruft. We now rely pretty much entirely on
    start-stop-daemon. This has the benefit of being smaller, no more
    dependency on pidof and more consistent and effcient.

    depscan.sh will correctly adjust future mtimes in /etc/conf.d and
    /etc/init.d, #157432 hopefully for the last time.

    Split clock configs into BSD and Linux - we share the same init file though.

    You can now specify relay and suffix for ip6to4 interfaces, thanks
    to Asfand Yar Qazi.

    Add conditionalrestart action, which is the same as restart but the service
    is only restarted if it is already started. This means that anything that
    whats this only has to use one command instead of two, making them more
    efficient.

  08 Jan 2007; Roy Marples <uberlord@gentoo.org>:

    Create a test file, and if the status is newer than that bail out
    after running the service, #154670.

    bootmisc now just checks to see if the pid exists for .pid files in