@@ -45,6 +45,10 @@ Use this \fIdeptree\fR instead of the default one,
 Just show the dependencies for the specified services without working out
 anything extra.
 .TP
+\fB--strict\fR
+For provided services, depend on all of them in the runlevel instead of just
+ones that are started.
+.TP
 \fB-dependency_type\fR
 Work with the specified dependency type, such as \fIineed\fR, \fIiafter\fR,
 \fIneedsme\fR.
